--- a/Composite/nbproject/project.properties
+++ b/Composite/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Composite
+application.vendor=me
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,10 +31,17 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Composite.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.log4j-1.2-api-2.11.0.jar=lib/log4j-1.2-api-2.11.0.jar
+file.reference.log4j-api-2.11.0.jar=lib/log4j-api-2.11.0.jar
+file.reference.log4j-core-2.11.0.jar=lib/log4j-core-2.11.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.log4j-1.2-api-2.11.0.jar}:\
+    ${file.reference.log4j-api-2.11.0.jar}:\
+    ${file.reference.log4j-core-2.11.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -46,7 +54,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.testng.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
